--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Lucro e Estoque</title>
+    <title>Calculadora de PIX</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -51,15 +51,12 @@
 </head>
 <body>
     <div class="container">
-        <h2>Calculadora de Lucro e Estoque</h2>
-        <label for="custo">Valor gasto no estoque (R$):</label>
-        <input type="number" id="custo" placeholder="Ex: 20">
+        <h2>Calculadora de PIX</h2>
+        <label for="valorTotal">Valor total sacado (R$):</label>
+        <input type="number" id="valorTotal" placeholder="Ex: 100">
 
-        <label for="venda">Preço de venda (R$):</label>
-        <input type="number" id="venda" placeholder="Ex: 50">
-
-        <label for="pix">Valor total do PIX recebido pelo loginsk (R$):</label>
-        <input type="number" id="pix" placeholder="Ex: 100">
+        <label for="parteCaio">Parte do Caio (R$):</label>
+        <input type="number" id="parteCaio" placeholder="Ex: 50">
 
         <button onclick="calcular()">Calcular</button>
 
@@ -68,31 +65,18 @@
 
     <script>
         function calcular() {
-            const custo = parseFloat(document.getElementById("custo").value);
-            const venda = parseFloat(document.getElementById("venda").value);
-            const pix = parseFloat(document.getElementById("pix").value);
+            const valorTotal = parseFloat(document.getElementById("valorTotal").value);
+            const parteCaio = parseFloat(document.getElementById("parteCaio").value);
 
-            if (isNaN(custo) || isNaN(venda) || isNaN(pix) || custo <= 0 || venda <= 0 || pix <= 0) {
+            if (isNaN(valorTotal) || isNaN(parteCaio) || valorTotal <= 0 || parteCaio < 0) {
                 document.getElementById("resultado").innerHTML = "Por favor, insira valores válidos.";
                 return;
             }
 
-            const lucroBruto = venda - custo;
-            const estoqueAdicional = lucroBruto * 0.2; // 20% para aumentar o estoque
-            const lucroLiquido = lucroBruto - estoqueAdicional;
-            const lucroPorPessoa = lucroLiquido / 2;
-
-            // Cálculo do quanto seu amigo deve enviar para você
-            const minhaParte = lucroPorPessoa + estoqueAdicional;
+            const valorParaEnviar = valorTotal - parteCaio;
 
             document.getElementById("resultado").innerHTML = `
-                <p><strong>Resultados:</strong></p>
-                <p>Lucro Bruto: R$ ${lucroBruto.toFixed(2)}</p>
-                <p>Adicional para Estoque: R$ ${estoqueAdicional.toFixed(2)}</p>
-                <p>Lucro Líquido (para dividir): R$ ${lucroLiquido.toFixed(2)}</p>
-                <p>Lucro para cada pessoa: R$ ${lucroPorPessoa.toFixed(2)}</p>
-                <p><strong>Valor que o loginsk deve te enviar:</strong> R$ ${minhaParte.toFixed(2)}</p>
-                <p><strong>Valor total do PIX recebido:</strong> R$ ${pix.toFixed(2)}</p>
+                <p><strong>Valor que Caio deve te enviar:</strong> R$ ${valorParaEnviar.toFixed(2)}</p>
             `;
         }
     </script>
