--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p>Adicional para Estoque: R$ ${adicionalEstoque.toFixed(2)}</p>
                 <p>Lucro Líquido (para dividir): R$ ${lucroLiquido.toFixed(2)}</p>
                 <p>Lucro para cada pessoa: R$ ${lucroPorPessoa.toFixed(2)}</p>
-                <p><strong>Valor que Caio deve te mandar:</strong> R$ ${valorParaEnviar.toFixed(2)}</p>
+                <p><strong>Pix pro loginsk:</strong> R$ ${valorParaEnviar.toFixed(2)}</p>
             `;
         }
     </script>
