--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
             border-radius: 5px;
             font-weight: bold;
         }
+        .result p {
+            margin: 5px 0;
+        }
+        .copy-btn {
+            background-color: #007bff;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .copy-btn:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -61,6 +73,7 @@
         <button onclick="calcular()">Calcular</button>
 
         <div class="result" id="resultado"></div>
+        <button class="copy-btn" onclick="copiarResultado()">Copiar Resultados</button>
     </div>
 
     <script>
@@ -84,15 +97,42 @@
             // Valor total que irá para o estoque
             const totalEstoque = custo + adicionalEstoque;
 
-            document.getElementById("resultado").innerHTML = `
+            const resultadoHTML = `
                 <p><strong>Resultados:</strong></p>
-                <p>Lucro Bruto: R$ ${lucroBruto.toFixed(2)}</p>
-                <p>Adicional para Estoque: R$ ${adicionalEstoque.toFixed(2)}</p>
-                <p>Valor Total para Estoque: R$ ${totalEstoque.toFixed(2)}</p>
-                <p>Lucro Líquido (para dividir): R$ ${lucroLiquido.toFixed(2)}</p>
-                <p>Lucro para cada pessoa: R$ ${lucroPorPessoa.toFixed(2)}</p>
-                <p><strong>Pix pro loginsk:</strong> R$ ${valorParaEnviar.toFixed(2)}</p>
+                <p>Lucro Bruto: <strong>R$ ${lucroBruto.toFixed(2)}</strong></p>
+                <p>Adicional para Estoque: <strong>R$ ${adicionalEstoque.toFixed(2)}</strong></p>
+                <p>Valor Total para Estoque: <strong>R$ ${totalEstoque.toFixed(2)}</strong></p>
+                <p>Lucro Líquido (para dividir): <strong>R$ ${lucroLiquido.toFixed(2)}</strong></p>
+                <p>Lucro para cada pessoa: <strong>R$ ${lucroPorPessoa.toFixed(2)}</strong></p>
+                <p><strong>Pix pro loginsk:</strong> <strong>R$ ${valorParaEnviar.toFixed(2)}</strong></p>
             `;
+
+            document.getElementById("resultado").innerHTML = resultadoHTML;
+
+            // Guardar o texto para o botão de copiar
+            document.getElementById("resultado").dataset.textoCopiar = `
+Resultados:
+Lucro Bruto: R$ ${lucroBruto.toFixed(2)}
+Adicional para Estoque: R$ ${adicionalEstoque.toFixed(2)}
+Valor Total para Estoque: R$ ${totalEstoque.toFixed(2)}
+Lucro Líquido (para dividir): R$ ${lucroLiquido.toFixed(2)}
+Lucro para cada pessoa: R$ ${lucroPorPessoa.toFixed(2)}
+Pix pro loginsk: R$ ${valorParaEnviar.toFixed(2)}
+            `;
+        }
+
+        function copiarResultado() {
+            const textoCopiar = document.getElementById("resultado").dataset.textoCopiar;
+
+            if (textoCopiar) {
+                navigator.clipboard.writeText(textoCopiar).then(() => {
+                    alert("Resultados copiados para a área de transferência!");
+                }).catch(() => {
+                    alert("Erro ao copiar os resultados.");
+                });
+            } else {
+                alert("Nenhum resultado disponível para copiar.");
+            }
         }
     </script>
 </body>
